// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor calls onClick after rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor"
  href="test"
  onClick={[Function]}
/>
`;

exports[`Anchor calls onClick after rendering 2`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor"
  href="test"
  onClick={[Function]}
/>
`;

exports[`Anchor has correct default options 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor"
  href="test"
  onClick={[Function]}
/>
`;

exports[`Anchor has correct disabled=true rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--disabled"
  href="test"
  onClick={[Function]}
/>
`;

exports[`Anchor has correct icon and label rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon grommetux-anchor--icon-label"
  href={undefined}
  onClick={[Function]}
>
  <svg
    height="24px"
    role="img"
    version="1.1"
    viewBox="0 0 24 24.3616"
    width="24px"
  />
  test
</a>
`;

exports[`Anchor has correct icon as a child rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href={undefined}
  onClick={[Function]}
>
  <span
    className="grommetux-anchor__icon"
  >
    <svg
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24.3616"
      width="24px"
    />
  </span>
</a>
`;

exports[`Anchor has correct icon rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon"
  href={undefined}
  onClick={[Function]}
>
  <span
    className="grommetux-anchor__icon"
  >
    <svg
      height="24px"
      role="img"
      version="1.1"
      viewBox="0 0 24 24.3616"
      width="24px"
    />
  </span>
</a>
`;

exports[`Anchor has correct primary=true rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor grommetux-anchor--animate-icon grommetux-anchor--icon grommetux-anchor--primary"
  href="test"
  onClick={[Function]}
>
  <svg
    aria-label="link next"
    className="grommetux-control-icon grommetux-control-icon-link-next grommetux-control-icon--responsive"
    height="24px"
    role="img"
    version="1.1"
    viewBox="0 0 24 24"
    width="24px"
  >
    <path
      d="M2,12 L22,12 M13,3 L22,12 L13,21"
      fill="none"
      stroke="#000"
      strokeWidth="2"
    />
  </svg>
</a>
`;

exports[`Anchor has correct text as a child rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor"
  href={undefined}
  onClick={[Function]}
>
  test
</a>
`;

exports[`Anchor preserves id after rendering 1`] = `
<a
  aria-label={undefined}
  className="grommetux-anchor"
  href="test"
  id="test"
  onClick={[Function]}
/>
`;
